// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAccountSettings /> Component should call function when clicked on logout button 1`] = `
<span>
  <WithStyles(IconButton)
    aria-label="My account settings"
    color="inherit"
    onClick={[Function]}
  >
    <WithStyles(Avatar)
      aria-label="name lastname"
    />
  </WithStyles(IconButton)>
  <WithStyles(Menu)
    PaperProps={
      Object {
        "style": Object {
          "maxHeight": 216,
          "width": 200,
        },
      }
    }
    anchorEl={null}
    id="long-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        primary="Vertical Split"
      />
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        onClick={[Function]}
        primary="Sair"
      />
    </WithStyles(MenuItem)>
  </WithStyles(Menu)>
</span>
`;

exports[`<UserAccountSettings /> Component should render correctly 1`] = `
<span>
  <WithStyles(IconButton)
    aria-label="My account settings"
    color="inherit"
    onClick={[Function]}
  >
    <WithStyles(Avatar)
      aria-label="name lastname"
    />
  </WithStyles(IconButton)>
  <WithStyles(Menu)
    PaperProps={
      Object {
        "style": Object {
          "maxHeight": 216,
          "width": 200,
        },
      }
    }
    anchorEl={null}
    id="long-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        primary="Vertical Split"
      />
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        onClick={[Function]}
        primary="Sair"
      />
    </WithStyles(MenuItem)>
  </WithStyles(Menu)>
</span>
`;

exports[`<UserAccountSettings /> Component should state is not null when clicked on IconBUtton button 1`] = `
<span>
  <WithStyles(IconButton)
    aria-label="My account settings"
    color="inherit"
    onClick={[Function]}
  >
    <WithStyles(Avatar)
      aria-label="name lastname"
    />
  </WithStyles(IconButton)>
  <WithStyles(Menu)
    PaperProps={
      Object {
        "style": Object {
          "maxHeight": 216,
          "width": 200,
        },
      }
    }
    anchorEl={true}
    id="long-menu"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        primary="Vertical Split"
      />
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        onClick={[Function]}
        primary="Sair"
      />
    </WithStyles(MenuItem)>
  </WithStyles(Menu)>
</span>
`;

exports[`<UserAccountSettings /> Component should state to be null when clicked on MenuItem 1`] = `
<span>
  <WithStyles(IconButton)
    aria-label="My account settings"
    color="inherit"
    onClick={[Function]}
  >
    <WithStyles(Avatar)
      aria-label="name lastname"
    />
  </WithStyles(IconButton)>
  <WithStyles(Menu)
    PaperProps={
      Object {
        "style": Object {
          "maxHeight": 216,
          "width": 200,
        },
      }
    }
    anchorEl={null}
    id="long-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        primary="Vertical Split"
      />
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      className="UserAccountSettings-menuItem-1"
      onClick={[Function]}
    >
      <WithStyles(ListItemIcon)>
        <pure(CallSplitIcon) />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        inset={true}
        onClick={[Function]}
        primary="Sair"
      />
    </WithStyles(MenuItem)>
  </WithStyles(Menu)>
</span>
`;
